[package]
name = "value_plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.8", features=["derive"]}
eframe = "0.19.0"
egui = "0.19.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
